--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,38 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-2">Work Day Scheduler</h1>
+      <hr>
+      <p class="font-weight-lighter">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div id="timeBlocks" class="container">
       <!-- Timeblocks go here -->
+      <div class="">
+        <table class="table">
+          <tbody>
+            <tr>
+              <th scope="col-1">Time</th>
+              <th scope="col-10" class="text-center">Tasks</th>
+              <th scope="col-1" class="text-right">Save</th>
+            </tr>
+            <tr>
+              <th scope="row">08:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">09:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">10:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">11:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">12:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">13:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">14:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">15:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">16:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">17:00</th>
+              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-right"><i class="far fa-save"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
+    <script src="https://kit.fontawesome.com/b86300fd7f.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
   </body>
 </html>
