fleshed out the javascript DOM manipulation and functionality. A few bugs to work out and some styling to make it more useable and asthetic

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,7 +23,7 @@
     </header>
     <div id="timeBlocks" class="container">
       <!-- Timeblocks go here -->
-      <div class="">
+      <!--<div class="">
         <table class="table">
           <tbody>
             <tr>
@@ -33,23 +33,23 @@
             </tr>
             <tr>
               <th scope="row">08:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
+              <td class="text-left"><textarea id="8am" type="text" class="form-control"></textarea></td>
               <td class="text-right"><i class="far fa-save"></i></td>
             </tr>
             <tr>
               <th scope="row">09:00</th>
               <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
+              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
             </tr>
             <tr>
               <th scope="row">10:00</th>
               <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
+              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
             </tr>
             <tr>
               <th scope="row">11:00</th>
               <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
+              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
             </tr>
             <tr>
               <th scope="row">12:00</th>
@@ -83,7 +83,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
+      </div>-->
     </div>
 
     <script src="https://kit.fontawesome.com/b86300fd7f.js" crossorigin="anonymous"></script>
