added table through jqyery and made everything react with the time

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,78 +18,19 @@
     <header class="jumbotron">
       <h1 class="display-2">Work Day Scheduler</h1>
       <hr>
-      <p class="font-weight-lighter">A simple calendar app for scheduling your work day</p>
+      <p class="myMainP font-weight-lighter">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <h2 id="currentTime" class="display-4"></h2>
     </header>
     <div id="timeBlocks" class="container">
       <!-- Timeblocks go here -->
-      <!--<div class="">
-        <table class="table">
-          <tbody>
-            <tr>
-              <th scope="col-1">Time</th>
-              <th scope="col-10" class="text-center">Tasks</th>
-              <th scope="col-1" class="text-right">Save</th>
-            </tr>
-            <tr>
-              <th scope="row">08:00</th>
-              <td class="text-left"><textarea id="8am" type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">09:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">10:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">11:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i id="saveButton" class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">12:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">13:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">14:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">15:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">16:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-            <tr>
-              <th scope="row">17:00</th>
-              <td class="text-left"><textarea type="text" class="form-control"></textarea></td>
-              <td class="text-right"><i class="far fa-save"></i></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>-->
+      
     </div>
 
     <script src="https://kit.fontawesome.com/b86300fd7f.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="scriptus.js"></script>
   </body>
 </html>
